<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AffectSense</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="StartApp">Start Application</string>
    <string name="StopApp">Stop Application</string>
    <string name="DispStat">Display Statistics</string>
    <string name="ViewStat">Submit</string>
    <string name="ShareStat">Share</string>
    <string name="Register">Register</string>
    <string name="Cancel">Cancel</string>
    <string name="title_activity_keyboard">Select the Default Keyboard</string>
    <string name="title_activity_moodrecord">Select your Emotion</string>
    <string name="title_activity_consent">Receive User Consent</string>
    <string name="simple_ime">Custom Keyboard</string>
    <string name="file_upload">Upload Data Files</string>
    <string name="app_logging">App Logger</string>
    <string name="subtype_en_US">English (US)</string>

    <!-- User Consent Details -->

    <string name="user_thank_you">Hello! Thank you for using AffectSense.</string>
    <string name="user_consent_kb_mood">As you use AffectSense, (a) You have to select the AffectSense keybaord as the default one and (b) have to record emotional state.</string>
    <string name="user_consent_do_capture"> For exploration purpose, following details will be captured from your phone.(a) Applications you use (b) Your typing behaviour </string>
    <string name="user_consent_dont_capture">We will NOT capture any text, personal sensitive information, passwords etc. from this app.</string>
    <string name="usr_ok">OK</string>
    <string name="blank_line"></string>
    <string name="title_activity_notification">Notification</string>

    <!-- Mood Details -->

    <string name="radio_mood1">Sad / Depressed</string>
    <string name="radio_mood2">Happy / Excited</string>
    <string name="radio_mood3">Stressed</string>
    <string name="radio_mood4">Relaxed</string>
    <string name="radio_mood5">No Response</string>
    <string name="mood_str">How are you feeling now?</string>
    <string name="btn_record">Record Emotion</string>

    <!-- User Experience Details -->

    <string name="radio_uexp1">Not Applicable</string>
    <string name="radio_uexp2">Not Satisfactory</string>
    <string name="radio_uexp3">Satisfactory</string>
    <string name="user_exp_str">How convenient to record mood?</string>

    <!-- File, Path Details -->

    <string name="data_file_path">/AffectSense/DataFiles/</string>
    <string name="to_be_uploaded_file_path">/AffectSense/DataFiles/ToBeUploaded/</string>
    <string name="archive_file_path">/AffectSense/DataFiles/Archive/</string>
    <string name="mood_firing_file_postfix">_Mood_Firing.txt</string>
    <string name="registration_file_postfix">_Registration_Details.txt</string>
    <string name="mood_file_postfix">_Mood_Label.txt</string>
    <string name="tap_file_postfix">_Tap_Label.txt</string>
    <string name="app_file_postfix">_App_Logger.txt</string>
    <string name="sensor_file_postfix">_Sensor_Logger.txt</string>
    <string name="session_file_postfix">_Session_Stat.txt</string>
    <string name="gps_file_postfix">_GPS_info.txt</string>
    <string name="sms_file_postfix">_SMS_info.txt</string>
    <string name="call_file_postfix">_CALL_info.txt</string>
    <string name="browse_file_postfix">_Browse_info.txt</string>
    <string name="wifi_file_postfix">_WiFi_info.txt</string>

    <!-- Time Format -->

    <string name="time_format">yyyy-MM-dd HH:mm:ss.SSS</string>

    <!-- Server Details -->

    <string name="server_ip">10.5.18.202</string>
    <string name="server_port">5000</string>
    <string name="server_uri">http://10.5.18.202/AffectSense/upload.php</string>

    <!-- ESM Constraints -->

    <string name="esm_min_txt_length">60</string>
    <string name="esm_app_min_window">30</string>

    <!-- Interval Details in Minutes -->


    <!-- mood_interval(in seconds) specifies how frequently polling will happen -->
    <!-- common_interval(in seconds) specifies how frequently alarmreceiver will run -->
    <!-- sensor_sampling_interval(in minutes) specifies the sampling frequency of the sensors -->
    <!-- sensor_sleep_interval(in minutes) specifies the sleep period between two sensor collection interval -->
    <!-- sensor_collection_interval(in seconds) specifies active sensor data collection duration -->
    <!-- app_logging_interval(in seconds) specifies the periodicity of foreground app logging service -->
    <!-- mood_interval_threshold specifies the in between idle time that is considered as signal for signal based ESM -->
    <!-- esm_time_interval specifies the periodicity for time based ESM -->
    <!-- upload_interval specifies the periodicity of the file upload service -->
    <!-- budget_calc_interval specifies the frequency for calculating ESM budgets -->

    <string name="common_interval">5</string>
    <string name="mood_interval">5</string>
    <!-- mood_interval specified in seconds -->
    <!-- string name="sensor_sampling_interval">5</string -->
    <string name="param_logging_interval">30</string>
    <!-- param_logging_interval is in minutes -->
    <string name="app_logging_interval">10</string>
    <string name="file_upload_interval">10</string>
    <string name="sensor_sleep_interval">30</string>
    <string name="sensor_collection_interval">1</string>
    <string name="sms_call_browse_interval">1</string>
    <string name="esm_time_interval">60</string>
    <string name="budget_calc_interval">60</string>
    <string name="mood_interval_threshold">1</string>
    <string name="gps_info_interval">10</string>
    <string name="wifi_info_interval">1</string>

    <!-- For SharedPreference (Running Status, ESMPeriodicCount) -->
    <string name="mood_sharedpref_file">MoodSharedPref</string>
    <string name="sharedpref_running_status">RunningStatus</string>
    <string name="sharedpref_registration_flag">RegistrationFlag</string>
    <string name="moodrecorder_pkg">research.sg.edu.edapp</string>
    <string name="title_activity_perform_registration">PerformOneTimeRegistration</string>
    <string name="title_activity_user_consent">UserConsent</string>

    <!-- Timestamps for all services -->
    <string name="sharedpref_file">EDAppSharedPref</string>
    <string name="param_log_timestamp">AppLogTimeStamp</string>
    <string name="app_log_timestamp">AppLogTimeStamp</string>
    <string name="file_upload_timestamp">FileUploadTimeStamp</string>
    <string name="sensor_sample_timestamp">SensorSampleTimeStamp</string>
    <string name="sms_call_browse_timestamp">SMSCallBrowseTimeStamp</string>
    <string name="mood_log_timestamp">MoodLogTimeStamp</string>
    <string name="sharedpref_pkg">research.sg.edu.edapp</string>

    <!-- For SharedPreference used by SMS, CALL, BROWSE timestamps -->
    <string name="date_sharedpref_file">DateSharedPref</string>
    <string name="sms_date">SmsDate</string>
    <string name="call_date">CallDate</string>
    <string name="browse_date">BrowseDate</string>

    <!-- For SharedPreference used by the Applogging service -->
    <string name="applogger_sharedpref_file">AppLoggerSharedPref</string>
    <string name="sharedpref_last_logged_app_name">LastFgAppName</string>
    <string name="applogger_pkg">research.sg.edu.edapp</string>

    <!-- For SharedPreference used by different counters -->
    <string name="ctr_sharedpref_file">CtrSharedPref</string>
    <string name="mood_ctr">MoodCtr</string>
    <string name="tap_ctr">TapCtr</string>
    <string name="app_ctr">AppCtr</string>
    <string name="sensor_ctr">SensorCtr</string>
    <string name="session_file_ctr">SessionFileCtr</string>
    <string name="gps_ctr">GpsCtr</string>
    <string name="sms_ctr">SmsCtr</string>
    <string name="call_ctr">CallCtr</string>
    <string name="browse_ctr">BrowseCtr</string>
    <string name="wifi_ctr">WiFiCtr</string>
    <string name="ctr_pkg">research.sg.edu.edapp</string>

    <!-- For SharedPreference to track typing session -->
    <string name="typing_session_sharedpref_file">TypSessionSharedPref</string>
    <string name="typing_session_no">TypingSessionNo</string>
    <string name="typing_session_pkg">research.sg.edu.edapp</string>

    <!-- File size threshold in KB -->

    <string name="mood_file_size_limit">1</string>
    <string name="tap_file_size_limit">20</string>
    <string name="app_file_size_limit">10</string>
    <string name="sensor_file_size_limit">100</string>
    <string name="session_file_size_limit">1</string>
    <string name="gps_file_size_limit">2</string>
    <string name="sms_file_size_limit">2</string>
    <string name="call_file_size_limit">2</string>
    <string name="browse_file_size_limit">2</string>
    <string name="wifi_file_size_limit">100</string>

    <!-- Strings related to Soft keyboard -->


    <!-- Title for Latin keyboard -->
    <string name="ime_name">AffectSense Keyboard</string>

    <!-- Symbols that are commonly considered word separators in this language -->
    <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;>_+=|"</string>

    <!-- Labels on soft keys -->
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_send_key">Send</string>

    <!-- Labels for subtype -->
    <string name="label_subtype_generic">%s</string>
    <string name="label_subtype_en_GB">AffectSense Keyboard</string>

    <!-- Titles for ImePreference -->
    <string name="settings_name">Sample Soft Keyboard Settings</string>
    <string name="language_selection_title">Input languages</string>
    <string name="select_language">Select input languages</string>
    <string name="general_category">General</string>

    <!-- For SharedPreference -->
    <!-- string name="sharedpref_file">TapSenseSharedPref</string -->
    <string name="sharedpref_tstamp">TimeStamp</string>
    <string name="sharedpref_mood_rdy_to_record">MoodToBeRecorded</string>
    <string name="sharedpref_last_app_name">LastAppName</string>
    <string name="keyboard_pkg">com.example.android.softkeyboard</string>

    <!-- For SharedPreference (Current Mood) Cross apps -->
    <string name="tap_mood_sharedpref_file">TapMoodSharedPref</string>
    <string name="sharedpref_current_mood">CurrentMood</string>
    <string name="sharedpref_esm_event">ESMFlagEvent</string>
    <string name="sharedpref_esm_signal">ESMFlagSignal</string>
    <string name="sharedpref_esm_time">ESMFlagTime</string>
    <!-- string name="moodrecorder_pkg">com.test.a.sample.tapsense</string -->

    <string name="title_activity_mood_recorder">MoodRecorder</string>
    <string name="title_activity_display_dashboard">DisplayDashboard</string>

    <!-- Dashboard related Parameters -->
    <!--  -->

    <string name="internal_emotion_uri">http://10.5.18.202/AffectSense/get_emotion_data.php?id=</string>
    <string name="external_emotion_uri">http://10.5.18.202/AffectSense/upload.php</string>

    <!--  -->
    <!-- End of Dashboard related Parameters -->
    <string name="title_activity_share_button">Share</string>
    <string name="title_activity_shareon_fb">ShareonFB</string>
    <string name="swype">Try swyping</string>
    <string name="motion_history">Motion History Displays here</string>

</resources>
