<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mood_str"
        android:id="@+id/textView" />

    <RadioGroup
        android:id="@+id/radioMoodGroup"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.07">

        <RadioButton
            android:id="@+id/radioMood1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_mood1"/>
        <!--android:checked="true" /-->

        <RadioButton
            android:id="@+id/radioMood2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_mood2" />

        <RadioButton
            android:id="@+id/radioMood3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_mood3" />

        <RadioButton
            android:id="@+id/radioMood4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_mood4" />

        <RadioButton
            android:id="@+id/radioMood5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_mood5"
            android:checked="true" />

        <!--RadioButton
            android:id="@+id/radioMood5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_mood5" /-->

        <!--RadioButton
            android:id="@+id/radioMood6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_mood6" /-->

    </RadioGroup>

    <!--TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/user_exp_str"
        android:id="@+id/textViewUsrExp" />

    <RadioGroup
        android:id="@+id/radioGroupUsrExp"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.07">

        <RadioButton
            android:id="@+id/radioUsrExp1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_uexp1"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioUsrExp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_uexp2" />

        <RadioButton
            android:id="@+id/radioUsrExp3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_uexp3" />

    </RadioGroup-->

    <Button
        android:id="@+id/btnRecordMood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_record" />

</LinearLayout>

    <!-- RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

        <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout -->
